<resources>
    <string name="app_name">Calculator</string>
    <string name="dotText">.</string>
    <string name="oneText">1</string>
    <string name="twoText">2</string>
    <string name="threeText">3</string>
    <string name="fourText">4</string>
    <string name="fiveText">5</string>
    <string name="sixText">6</string>
    <string name="minusText">-</string>
    <string name="equalText">=</string>
    <string name="nineText">9</string>
    <string name="eightText">8</string>
    <string name="sevenText">7</string>
    <string name="plusText">+</string>
    <string name="textZero">0</string>
    <string name="delText">del</string>
    <string name="petcentText">%</string>
    <string name="divideText">/</string>
    <string name="multipyText">x</string>
    <string name="clearText">C</string>
</resources>