<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button"
            android:text="@string/dotText"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/zero"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/one" />

        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button"
            android:text="@string/textZero"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/equal"
            app:layout_constraintStart_toEndOf="@+id/dot"
            app:layout_constraintTop_toBottomOf="@+id/two" />

        <Button
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button"
            android:text="@string/equalText"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/plus"
            app:layout_constraintStart_toEndOf="@+id/zero"
            app:layout_constraintTop_toBottomOf="@+id/three" />

        <Button
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:background="@drawable/button"
            android:text="@string/plusText"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:backgroundTint="@color/yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/equal"
            app:layout_constraintTop_toBottomOf="@+id/minus" />

        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button"
            android:text="@string/oneText"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/dot"
            app:layout_constraintEnd_toStartOf="@+id/two"
            app:layout_constraintStart_toStartOf="@+id/dot"
            app:layout_constraintTop_toBottomOf="@+id/four" />

        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/grey"
            android:text="@string/twoText"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/zero"
            app:layout_constraintEnd_toStartOf="@+id/three"
            app:layout_constraintStart_toEndOf="@+id/one"
            app:layout_constraintTop_toBottomOf="@+id/five" />

        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/grey"
            android:text="@string/threeText"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/equal"
            app:layout_constraintEnd_toStartOf="@+id/plus"
            app:layout_constraintStart_toEndOf="@+id/two"
            app:layout_constraintTop_toBottomOf="@+id/six" />

        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/grey"
            android:text="@string/fourText"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/one"
            app:layout_constraintEnd_toStartOf="@+id/two"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/dot"
            app:layout_constraintTop_toBottomOf="@+id/seven" />

        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/grey"
            android:text="@string/fiveText"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/two"
            app:layout_constraintEnd_toStartOf="@+id/six"
            app:layout_constraintStart_toEndOf="@+id/four"
            app:layout_constraintTop_toBottomOf="@+id/eight" />

        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button"
            android:text="@string/sixText"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/three"
            app:layout_constraintEnd_toStartOf="@+id/minus"
            app:layout_constraintStart_toEndOf="@+id/five"
            app:layout_constraintTop_toBottomOf="@+id/nine" />

        <Button
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button"
            android:text="@string/minusText"
            android:textSize="24sp"
            app:backgroundTint="@color/purple"
            app:layout_constraintBottom_toTopOf="@+id/plus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/six"
            app:layout_constraintTop_toBottomOf="@+id/mul" />

        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/grey"
            android:text="@string/sevenText"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/four"
            app:layout_constraintEnd_toStartOf="@+id/two"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/dot"
            app:layout_constraintTop_toBottomOf="@+id/clear" />

        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/grey"
            android:text="@string/eightText"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/five"
            app:layout_constraintEnd_toStartOf="@+id/nine"
            app:layout_constraintStart_toEndOf="@+id/seven"
            app:layout_constraintTop_toBottomOf="@+id/delete" />

        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/grey"
            android:text="@string/nineText"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/six"
            app:layout_constraintEnd_toStartOf="@+id/mul"
            app:layout_constraintStart_toEndOf="@+id/eight"
            app:layout_constraintTop_toBottomOf="@+id/mod" />

        <Button
            android:id="@+id/mul"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button"
            android:text="@string/multipyText"
            android:textSize="24sp"
            app:backgroundTint="@color/purple"
            app:layout_constraintBottom_toTopOf="@+id/minus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nine"
            app:layout_constraintTop_toBottomOf="@+id/divide" />

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/grey"
            android:text="@string/clearText"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/seven"
            app:layout_constraintEnd_toStartOf="@+id/two"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/dot"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/grey"
            android:text="@string/delText"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/eight"
            app:layout_constraintEnd_toStartOf="@+id/mod"
            app:layout_constraintStart_toEndOf="@+id/clear"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/mod"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/grey"
            android:text="@string/petcentText"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/nine"
            app:layout_constraintEnd_toStartOf="@+id/divide"
            app:layout_constraintStart_toEndOf="@+id/delete"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button"
            android:text="@string/divideText"
            android:textSize="24sp"
            app:backgroundTint="@color/purple"
            app:layout_constraintBottom_toTopOf="@+id/mul"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mod"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <HorizontalScrollView
        android:id="@+id/resultScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right|end"
            android:foregroundGravity="right"
            android:gravity="right|end"
            android:textSize="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>